networkdir = $(pkgdatadir)/network

network_DATA = rftg.eval.0.2.net rftg.role.0.2.net \
               rftg.eval.0.2a.net rftg.role.0.2a.net \
               rftg.eval.0.3.net rftg.role.0.3.net \
               rftg.eval.0.4.net rftg.role.0.4.net \
               rftg.eval.1.2.net rftg.role.1.2.net \
               rftg.eval.1.2a.net rftg.role.1.2a.net \
               rftg.eval.1.3.net rftg.role.1.3.net \
               rftg.eval.1.4.net rftg.role.1.4.net \
               rftg.eval.1.5.net rftg.role.1.5.net \
	       rftg.eval.2.2.net rftg.role.2.2.net \
	       rftg.eval.2.2a.net rftg.role.2.2a.net \
	       rftg.eval.2.3.net rftg.role.2.3.net \
	       rftg.eval.2.4.net rftg.role.2.4.net \
	       rftg.eval.2.5.net rftg.role.2.5.net \
	       rftg.eval.2.6.net rftg.role.2.6.net \
	       rftg.eval.3.2.net rftg.role.3.2.net \
	       rftg.eval.3.2a.net rftg.role.3.2a.net \
	       rftg.eval.3.3.net rftg.role.3.3.net \
	       rftg.eval.3.4.net rftg.role.3.4.net \
	       rftg.eval.3.5.net rftg.role.3.5.net \
	       rftg.eval.3.6.net rftg.role.3.6.net \
               rftg.eval.4.2.net rftg.role.4.2.net \
               rftg.eval.4.2a.net rftg.role.4.2a.net \
               rftg.eval.4.3.net rftg.role.4.3.net \
               rftg.eval.4.4.net rftg.role.4.4.net \
               rftg.eval.4.5.net rftg.role.4.5.net

EXTRA_DIST = $(network_DATA)
